# njvm_rust

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  flake.nix  mknvjm  njvm  run.sh  rust-toolchain.toml  test  test.sh
.github/workflows/: njvm.yml
assets/a2/: prog2.out  prog4.asm  prog4.out
assets/a8/: aufgabe.adoc  heap_test2.nj
aufgaben/a-pre/: a-pre.sh  hello
aufgaben/a0/: install.sh  njvm  njvm.c
aufgaben/a1/src/: CMakeLists.txt  njvm.c
aufgaben/a2/: install.sh
crates/bigint/: Cargo.toml  build.rs
crates/cli/: Cargo.toml
crates/njvm/: Cargo.toml
crates/njvm/assets/a-pre/: aufgabe.adoc
crates/njvm/assets/a1/: prog3.asm
crates/njvm/assets/a8/: tree3.nj
crates/njvm/src/: lib.rs
crates/njvm/src/cpu/: immediate.rs  processor.rs
crates/njvm/src/memory/: heap.rs  instruction_register.rs  mod.rs
lib/: .gitignore  Cargo.toml
lib/src/: lib.rs
lib/tst/: testbip
scripts/: test.sh
src/: lib.rs  main.rs  njvm.rs
src/bigint/: mod.rs
src/cli/: mod.rs  start_cli.rs
src/cpu/: debugger.rs  immediate.rs  instruction.rs  instructions.rs  mod.rs  opcode.rs  processor.rs
src/io/: mod.rs
src/memory/: heap.rs  instruction_cache.rs  instruction_register.rs  mod.rs  program_memory.rs  stack.rs  static_data_area.rs
src/njvm/: mod.rs  njvm.rs
src/utils/: check_instructions.rs  check_ninja_format.rs  check_ninja_version.rs  check_variables.rs  fatal_error.rs  mod.rs  read_file.rs  set_ninja_version.rs  split_file_metadata.rs  unknown_arg.rs  verify_arg.rs
tests/: njvm.rs  tests.rs
tests/njvm/: mod.rs  njvm.rs
(+53 files in other folders)
