[package]
name = "njvm"
version = "0.0.8"
edition = "2021"
license = "MIT"
authors = ["Clemens Horn <clemens.horn@mni.thm.de>"]
description = "Virtual Machine for Ninja"
links = "bigint"
build = "build.rs"

[build-dependencies]
bindgen = "0.60.1"

[dev-dependencies]
assert_cmd = "2.0.4"
anyhow = "1.0.53"
predicates = "2.1.1"
difference = "2.0"
