[package]
name = "njvm"
version = "0.4.0"
edition = "2021"
license = "MIT"
authors = ["Clemens Horn <clemens.horn@mni.thm.de>"]
description = "Virtual Machine for Ninja"
build = "build.rs"

[lib]
name = "njvm" 
path = "src/lib.rs"

[[bin]]
name = "nvjm"
path = "src/main.rs"

[build-dependencies]
bindgen = "0.71.1"
