[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Clemens Horn <me@clemenshorn.com>"]

[workspace.metadata.crane]
name = "njvm"

[workspace.dependencies]
njvm = { path = "./crates/njvm" }
bigint = { path = "./crates/bigint" }
cli = { path = "./crates/cli" }
clap = { version = "4.5.20", features = ["derive", "help"] }
